--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
-  "name": "hono-metaframework-router",
+  "name": "find-route-files-project",
+  "version": "1.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "wrangler dev",
-    "deploy": "wrangler deploy --minify"
-  },
-  "dependencies": {
-    "hono": "^4.6.13"
+    "build": "ts-node --esm generate.ts",
+    "dev:1": "nodemon",
+    "dev": "concurrently \"nodemon\" \"wrangler dev\""
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241112.0",
+    "@types/node": "^18.14.1",
+    "concurrently": "^9.1.0",
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5",
     "wrangler": "^3.88.0"
+  },
+  "dependencies": {
+    "hono": "^4.6.13"
   }
 }
