--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
-name = "hono-metaframework-router"
-main = "src/index.ts"
-compatibility_date = "2024-12-10"
+name = "my-cool-app"
+main = "dist/index.ts"
+compatibility_date = "2024-04-01"
 
 # compatibility_flags = [ "nodejs_compat" ]
 
